tests/invalid/StaticVar_Invalid_6.whiley
int x = y + 1
int y = x